- When adding a file to the shortcut the base name (no exe or lnk) is set as the softkey name
- file dialog now sorts directory and files alphabetically, listing directories first
- updated donator list
- launcher are saved before applying a new theme and restored when the theme is fully applied
- file dialog now compares extension string without regards to case

Oct-29-2008
v0.17.183
- added new Home registry tab
-- adds option to set a custom name, custom icon, and hide the network name

Oct-28-2008
v0.16.178
- SOftkey dialog can now accept shortcut fifles (lnk files)
- added new program that will only open shortcuts for the softkeys
- updated donator list

Oct-28-2008
v0.15.176
- Added softkey dialog
    -- Only allows to set the name and command, not the command parameters
    -- The command must be an exe file
- Updated donator list

Oct-25-2008
v0.14.166
- Changed the underlying way the theme manager deals with XLM changes, previously
    the theme manager would only apply "RECT" and "POS" values, now the theme
    manager will use the actual file from the new theme, and then just update
    the themes xml file with the correct paths for the existing Manilla 2D images.
- updated theme readme with my thoghts and recommendations on themes and more
    details about how the theme manager process works
- List of available themes is now auto sorted alphabetically
- Updated about page with usernames of contributors
- added an artificial 5 seconds wait after disabling M2D, this is to give
    Manilla2D.exe time to unload itself and release any image files it might
    still have a handle on

Oct-19-2008
v0.13.154
- a few small bugfixes
- updated about page with usernames of contributors

Oct-16-2008
v0.12.148
- Fixed bug with launcher changing... used to be broken if the user didn't have 
   3, 6, or 9 rows.  Now it will round to one of those numbers and allow users
   to change launcher settings as before.